--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
             Components
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" routerLink=""><i class="fa fa-home"></i> Home</a>
             <a class="dropdown-item" routerLink="/forms/builder"><i class="fa fa-th-list"></i> Form Builder</a>
             <a class="dropdown-item" routerLink="/manager"><i class="fa fa-folder-open-o"></i> Form Manager</a>
-            <a class="dropdown-item" routerLink="/data"><i class="fa fa-table"></i> Data Table</a>
           </div>
         </li>
       </ul>
