--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
   <div class="card-body">
     <h5 class="card-title">Result</h5>
     <div class="card bg-light p-3">
-      <formio (submit)="onSubmit($event)" [form]="form" [submission]="submission"></formio>
+      <formio [params]="params" (submit)="onSubmit($event)" [form]="form" [submission]="submission"></formio>
     </div>
   </div>
   <button class="btn btn-outline-secondary btn-sm form-btn form-btn-use" (click)="preecherRespostas($event, form, 'view')"><span class="fa fa-list-alt"></span> Preecher Respostas Formulário</button>&nbsp;
