Desativando componentes com base em parametros

--- a/src/app/meu-componente/meu-componente.component.html
+++ b/src/app/meu-componente/meu-componente.component.html
@@ -1,4 +1,2 @@
-<p>meu-componente works!</p>
-<div>{{ placeholder }}</div>
-<div>{{ myOption }}</div>
-<button (click)="emitirEvento()">teste Evento</button>
+<div><p>{{placeholder}}</p></div>
+<button (click)="emitirEvento()">Adicionar mais um</button>
