--- a/src/app/forms/builder/builder.component.html
+++ b/src/app/forms/builder/builder.component.html
@@ -15,4 +15,8 @@
 <div class="mb-3">
   <button class="btn btn-outline-secondary btn-sm form-btn form-btn-use" (click)="saveForm($event, form, 'view')"><span class="fa fa-list-alt"></span> Salvar Formulário</button>&nbsp;
 </div>
+<div type=button (click)="goToTop()" class="iconArrow">
+  <i class="pi pi-arrow-up"></i>
+</div>
+
 
